kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: artfans-ingress
  namespace: artfans
  annotations:
    kubernetes.io/ingress.class: "gce"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - your-domain.com
      secretName: tls-artfans
  rules:
    - host: your-domain.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: artfans-api
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: artfans-web
                port:
                  number: 80
